base/minio/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
spec:
  ports:
    - port: 9000
      targetPort: http
      protocol: TCP
      name: http
    - port: 9001
      targetPort: console
      protocol: TCP
      name: console
  selector:
    app: minio
